Before & After template

--- a/templates/head.mjml
+++ b/templates/head.mjml
@@ -2,6 +2,7 @@
   <mj-title>{{title}}</mj-title>
   <mj-preview>{{title}}</mj-preview>
   <mj-breakpoint width="599px" />
+  <mj-font name="roboto" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400" />
   <mj-attributes>
     <mj-all font-family="roboto" ico-font-family="roboto" font-size="15px" color="#1E143E" line-height="20px" />
     <mj-section padding="0" />
