--- a/after.mjml
+++ b/after.mjml
@@ -23,7 +23,7 @@
     <mj-section css-class="rounded-mid">
       <mj-group>
         <mj-column vertical-align="top" width="100%" padding-left="30px" padding-right="30px">
-          <mj-text align="center" font-size="15px" padding-bottom="5px">If you are interested, you can become our next event sponsor or donate to MVP.</mj-text>
+          <mj-text align="center" font-size="15px" padding-bottom="5px">If you are interested, you can become our next event sponsor or donate to&nbsp;MVP.</mj-text>
         </mj-column>
       </mj-group>
     </mj-section>
