--- a/after.mjml
+++ b/after.mjml
@@ -12,8 +12,8 @@
     <mj-wrapper background-color="#FFE085">
       <mj-section>
         <mj-column background-color="#FFE085">
-          <mj-text padding-top="10px" padding-left="25px" padding-right="25px">Dear <span style="color:#FF00EB">[first name, Last name],</span></mj-text>
-          <mj-text padding-bottom="0" padding-left="25px" padding-right="25px" padding-bottom="20px">Thank you for attending our <span style="color:#FF00EB">[event name]</span> event! We're grateful for you sharing this very special time with us as we help young people of color prepare, perfrom, progress, prosper, and pay it forward. We hope to see you at another MVP: Momentum and Value for People of Color event soon!</mj-text>
+          <mj-text padding-top="10px" padding-left="25px" padding-right="25px">Dear <span style="color:#FF00EB">[first name, Last name]</span>,</mj-text>
+          <mj-text padding-bottom="0" padding-left="25px" padding-right="25px" padding-bottom="20px">Thank you for attending our <span style="color:#FF00EB">[event name]</span> event! We're grateful for you sharing this very special time with us as we help young people of color prepare, perform, progress, prosper, and pay it forward. We hope to see you at another MVP: Momentum and Value for People of Color event soon!</mj-text>
         </mj-column>
       </mj-section>
     </mj-wrapper>
@@ -40,7 +40,7 @@
     <mj-wrapper background-color="#FFE085">
       <mj-section>
         <mj-column background-color="#FFE085">
-          <mj-text padding-top="0px" font-size="15px" padding-left="25px" padding-right="25px" align="center">Learn more about our mission, and how we aim to create equality and access to opportunities for young people of color.</mj-text>
+          <mj-text padding-top="0px" font-size="15px" padding-left="25px" padding-right="25px" align="center">Learn more about our mission, and how we aim to create equity and access to opportunities for young people of color.</mj-text>
           <mj-button href="#" background-color="#1E143E" color="white" align="center" padding-left="0" width="180px" font-weight="bold" border-radius="8px" padding-bottom="25px">Learn more &#8250;</mj-button>
         </mj-column>
       </mj-section>
