--- a/templates/footer.mjml
+++ b/templates/footer.mjml
@@ -13,7 +13,7 @@
       MVP: Momentum and Value for People of Color | 43 Hilltop Rd., Kinnelon, NJ 07405<br>
       <u>Unsubscribe {recipient's email}</u><br>
       <u>Our Privacy Policy | Constant Contact Data Notice</u><br>
-      Sent by mvp.mvpoc@gmail.com
+      Sent by <a href="#" style="color:#222222; text-decoration:none;">mvp.mvpoc@gmail.com</a>
       </mj-text>
     </mj-column>
   </mj-section>
