--- a/after.mjml
+++ b/after.mjml
@@ -3,7 +3,7 @@
   <mj-body width="610px">
     <mj-section background-color="#FFF4DF">
       <mj-column width="50%" vertical-align="middle">
-        <mj-image src="./images/mvp_logo.png" alt="MVP Logo" padding-bottom="25px" padding-top="25px" padding-right="50px" width="208px" align="center" css-class="logo-top"></mj-image>
+        <mj-image src="./images/mvp_logo.png" alt="MVP Logo" href="https://mvpoc.org/" target="_blank" padding-bottom="25px" padding-top="25px" padding-right="50px" width="208px" align="center" css-class="logo-top"></mj-image>
       </mj-column>
       <mj-column width="50%" vertical-align="middle">
         <mj-image src="./images/event_image_container.png" alt="Event image" padding-bottom="15px" padding-top="15px" padding-right="0px" width="233px"></mj-image>
@@ -18,33 +18,29 @@
       </mj-section>
     </mj-wrapper>
     <mj-wrapper padding="25px" background-color="#FFE085">
-    <mj-section padding="15px 25px 0px" css-class="rounded-top">
-    </mj-section>
-    <mj-section css-class="rounded-mid">
-      <mj-group>
-        <mj-column vertical-align="top" width="100%" padding-left="30px" padding-right="30px">
-          <mj-text align="center" font-size="15px" padding-bottom="5px">If you are interested, you can become our next event sponsor or donate to&nbsp;MVP.</mj-text>
+      <mj-section padding-top="15px" border-top="3px solid #FF8020" border-left="3px solid #FF8020" border-right="3px solid #FF8020" background-color="#FFF4DF">
+        <mj-group>
+          <mj-column vertical-align="top" width="100%" padding-left="30px" padding-right="30px">
+            <mj-text align="center" font-size="15px" padding-bottom="5px">If you are interested, you can become our next event sponsor or donate to&nbsp;MVP.</mj-text>
+          </mj-column>
+        </mj-group>
+      </mj-section>
+      <mj-section padding-bottom="15px"  border-bottom="3px solid #FF8020" border-left="3px solid #FF8020" border-right="3px solid #FF8020" background-color="#FFF4DF">
+        <mj-group>
+          <mj-column padding="0px">
+          <mj-button href="https://mvpoc.org/donate/" target="_blank" background-color="#1E143E" color="white" align="center" padding-left="0" padding-right="0" width="160px" font-weight="bold" border-radius="8px">Donate &#8250;</mj-button>
         </mj-column>
-      </mj-group>
-    </mj-section>
-    <mj-section css-class="rounded-mid">
-      <mj-group>
-        <mj-column padding="0px">
-        <mj-button href="#" background-color="#1E143E" color="white" align="center" padding-left="0" padding-right="0" width="160px" font-weight="bold" border-radius="8px">Donate &#8250;</mj-button>
-      </mj-column>
-      </mj-group>
-    </mj-section>
-    <mj-section padding="25px 25px 0px" css-class="rounded-bottom">
-    </mj-section> 
-  </mj-wrapper>
+        </mj-group>
+      </mj-section>
+    </mj-wrapper>
     <mj-wrapper background-color="#FFE085">
       <mj-section>
         <mj-column background-color="#FFE085">
           <mj-text padding-top="0px" font-size="15px" padding-left="25px" padding-right="25px" align="center">Learn more about our mission, and how we aim to create equity and access to opportunities for young people of color.</mj-text>
-          <mj-button href="#" background-color="#1E143E" color="white" align="center" padding-left="0" padding-right="0" width="180px" font-weight="bold" border-radius="8px" padding-bottom="25px">Learn more &#8250;</mj-button>
+          <mj-button href="https://mvpoc.org/team/" target="_blank" background-color="#1E143E" color="white" align="center" padding-left="0" padding-right="0" width="180px" font-weight="bold" border-radius="8px" padding-bottom="25px">Learn more &#8250;</mj-button>
         </mj-column>
       </mj-section>
-  </mj-wrapper>
-  <mj-include path="./templates/footer.mjml">
+    </mj-wrapper>
+    <mj-include path="./templates/footer.mjml">
   </mj-body>
 </mjml>
