--- a/before.mjml
+++ b/before.mjml
@@ -3,7 +3,7 @@
   <mj-body width="610px">
     <mj-section background-color="#FFF4DF">
       <mj-column width="50%" vertical-align="middle">
-        <mj-image src="./images/mvp_logo.png" alt="MVP Logo" padding-bottom="25px" padding-top="25px" padding-right="50px" width="208px" align="center" css-class="logo-top"></mj-image>
+        <mj-image src="./images/mvp_logo.png" alt="MVP Logo" href="https://mvpoc.org/" target="_blank" padding-bottom="25px" padding-top="25px" padding-right="50px" width="208px" align="center" css-class="logo-top"></mj-image>
       </mj-column>
       <mj-column width="50%" vertical-align="middle">
         <mj-image src="./images/event_image_container.png" alt="Event image" padding-bottom="15px" padding-top="15px" padding-right="0px" width="233px"></mj-image>
@@ -18,57 +18,53 @@
       </mj-section>
     </mj-wrapper>
     <mj-wrapper padding="25px" background-color="#FFE085">
-    <mj-section padding="15px 25px 0px" css-class="rounded-top">
-    </mj-section>
-    <mj-section css-class="rounded-mid">
-      <mj-group>
-        <mj-column vertical-align="top" width="39%" padding="0px">
-          <mj-image align="right" src="./images/calendar-icon.png" width="34px" alt="Calendar icon" padding-right="10px" padding-top="12px" />
+      <mj-section padding-top="15px" background-color="#FFF4DF" border-top="3px solid #FF8020" border-left="3px solid #FF8020" border-right="3px solid #FF8020" background-color="#FFF4DF">
+        <mj-group>
+          <mj-column vertical-align="top" width="39%" padding="0px">
+            <mj-image align="right" src="./images/calendar-icon.png" width="34px" alt="Calendar icon" padding-right="10px" padding-top="12px" />
+          </mj-column>
+          <mj-column vertical-align="top" width="31%">
+            <mj-text align="left" font-size="15px" font-weight="bold" padding-top="0px">Date:<br><span style="color:#FF00EB; font-weight:400;">[<a href="#" style="color:#1E143E; text-decoration:none;">00-00-0000</a>]</span></mj-text>
+          </mj-column>
+        </mj-group>
+      </mj-section>
+      <mj-section border-left="3px solid #FF8020" border-right="3px solid #FF8020" background-color="#FFF4DF">
+        <mj-group>
+          <mj-column vertical-align="top" width="39%" padding="0px">
+            <mj-image align="right" src="./images/time-icon.png" width="30px" alt="Time icon" padding-right="12px" padding-top="12px"/>
+          </mj-column>
+          <mj-column vertical-align="top" width="31%">
+            <mj-text align="left" font-size="15px" font-weight="bold" padding-top="0px">Time:<br><span style="color:#FF00EB; font-weight:400;">[<a href="#" style="color:#1E143E; text-decoration:none;">00:00</a> <span style="font-variant:all-small-caps;">AM</span>/<span style="font-variant:all-small-caps;">PM</span>]</span></mj-text>
+          </mj-column>
+        </mj-group>
+      </mj-section>
+      <mj-section border-left="3px solid #FF8020" border-right="3px solid #FF8020" background-color="#FFF4DF">
+        <mj-group>
+          <mj-column vertical-align="top" width="39%" padding="0px">
+            <mj-image align="right" src="./images/location-icon.png" width="23px" alt="Location icon" padding-right="15px" padding-top="8px" />
+          </mj-column>
+          <mj-column vertical-align="top" width="31%" padding="0px">
+            <mj-text align="left" font-size="15px" font-weight="bold" padding-top="5px">Location:<br><span style="color:#FF00EB; font-weight:400;">
+              [Street Address Line 1<br/> 
+              Street Address Line 2<br/> 
+              City, State Zip Code<br/> 
+              /Virtual] </span></mj-text>
+          </mj-column>
+        </mj-group>
+      </mj-section>
+      <mj-section padding-bottom="15px" border-left="3px solid #FF8020" border-right="3px solid #FF8020" border-bottom="3px solid #FF8020"  background-color="#FFF4DF">
+        <mj-group>
+          <mj-column padding="0px">
+          <mj-button href="#" target="_blank" background-color="#1E143E" color="white" align="center" padding-left="0" padding-right="0" width="180px" font-weight="bold" border-radius="8px">Register now &#8250;</mj-button>
         </mj-column>
-        <mj-column vertical-align="top" width="31%">
-          <mj-text align="left" font-size="15px" font-weight="bold" padding-top="0px">Date:<br><span style="color:#FF00EB; font-weight:400;">[<a href="#" style="color:#1E143E; text-decoration:none;">00-00-0000</a>]</span></mj-text>
-        </mj-column>
-      </mj-group>
-    </mj-section>
-    <mj-section css-class="rounded-mid">
-      <mj-group>
-        <mj-column vertical-align="top" width="39%" padding="0px">
-          <mj-image align="right" src="./images/time-icon.png" width="30px" alt="Time icon" padding-right="12px" padding-top="12px"/>
-        </mj-column>
-        <mj-column vertical-align="top" width="31%">
-          <mj-text align="left" font-size="15px" font-weight="bold" padding-top="0px">Time:<br><span style="color:#FF00EB; font-weight:400;">[00:00 <span style="font-variant:all-small-caps;">AM</span>/<span style="font-variant:all-small-caps;">PM</span>]</span></mj-text>
-        </mj-column>
-      </mj-group>
-    </mj-section>
-    <mj-section css-class="rounded-mid">
-      <mj-group>
-        <mj-column vertical-align="top" width="39%" padding="0px">
-          <mj-image align="right" src="./images/location-icon.png" width="23px" alt="Location icon" padding-right="15px" padding-top="8px" />
-        </mj-column>
-        <mj-column vertical-align="top" width="31%" padding="0px">
-          <mj-text align="left" font-size="15px" font-weight="bold" padding-top="5px">Location:<br><span style="color:#FF00EB; font-weight:400;">
-            [Street Address Line 1<br/> 
-            Street Address Line 2<br/> 
-            City, State Zip Code<br/> 
-            /Virtual] </span></mj-text>
-        </mj-column>
-      </mj-group>
-    </mj-section>
-    <mj-section css-class="rounded-mid">
-      <mj-group>
-        <mj-column padding="0px">
-        <mj-button href="#" background-color="#1E143E" color="white" align="center" padding-left="0" padding-right="0" width="180px" font-weight="bold" border-radius="8px">Register now &#8250;</mj-button>
-      </mj-column>
-      </mj-group>
-    </mj-section>
-    <mj-section padding="10px 25px 0px" css-class="rounded-bottom">
-    </mj-section> 
+        </mj-group>
+      </mj-section>
   </mj-wrapper>
     <mj-wrapper background-color="#FFE085">
       <mj-section>
         <mj-column background-color="#FFE085">
           <mj-text padding-top="10px" font-size="15px" padding-left="25px" padding-right="25px">We understand that you may not be able to participate, but if you are interested, you can become an event sponsor or donate to&nbsp;MVP.</mj-text>
-          <mj-button href="#" background-color="#1E143E" color="white" align="center" padding-left="0" padding-right="0" width="180px" font-weight="bold" border-radius="8px" padding-bottom="25px">Donate &#8250;</mj-button>
+          <mj-button href="https://mvpoc.org/donate/" target="_blank" background-color="#1E143E" color="white" align="center" padding-left="0" padding-right="0" width="180px" font-weight="bold" border-radius="8px" padding-bottom="25px">Donate &#8250;</mj-button>
         </mj-column>
       </mj-section>
   </mj-wrapper>
